Header styled and content, secure commit prove

--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
           </div>
           <div class="col-12 col-md-8 header--right">
             <div class="row header--title">
-              <h1 id="title">Fake Individual</h1>
+              <div class="col-12">
+                <h1>Fake Individual</h1>
+              </div>
             </div>
-            <div class="row header--nav">
-              <div class="col-6 col-md-2">Home</div>
-              <div class="col-6 col-md-2">Habilities</div>
-              <div class="col-6 col-md-2">History</div>
-              <div class="col-6 col-md-2">Contact/CV</div>
+            <div id="title" class="row header--nav">
+              <div class="col-6 col-md-3"><h2>Home</h2></div>
+              <div class="col-6 col-md-3"><h2>Skills</h2></div>
+              <div class="col-6 col-md-3"><h2>History</h2></div>
+              <div class="col-6 col-md-3"><h2>Contact/CV</h2></div>
             </div>
           </div>
         </div>
