responsiveness from header image fix

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="container-fluid">
         <div class="row header--full">
           <div class="col-12 col-md-4 header--left">
-            <img class="profile--pic" src="assets/cartoon.png" alt="portrait" width="250px" height="250px">
+            <img class="profile--pic" src="assets/cartoon.png" alt="portrait" width="250px" height="98%">
           </div>
           <div class="col-12 col-md-8 header--right">
             <div class="row header--title">
@@ -26,10 +26,10 @@
               </div>
             </div>
             <div id="title" class="row header--nav">
-              <div class="col-6 col-md-3"><h2>Home</h2></div>
-              <div class="col-6 col-md-3"><h2>Skills</h2></div>
-              <div class="col-6 col-md-3"><h2>History</h2></div>
-              <div class="col-6 col-md-3"><h2>Contact/CV</h2></div>
+              <div class="col-6 col-md-3"><span>Home</span></div>
+              <div class="col-6 col-md-3"><span>Skills</span></div>
+              <div class="col-6 col-md-3"><span>History</span></div>
+              <div class="col-6 col-md-3"><span>Contact/CV</span></div>
             </div>
           </div>
         </div>
