Coded main-left section and ensured responsitivity of main section

--- a/index.html
+++ b/index.html
@@ -35,14 +35,42 @@
       </div>
     </header>
     
-    <div class="main main--content">
+    <div class="main--content">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12 col-md-4 main--left">
-            data
+            <div class="row">
+              <h3>Job 1 title</h3>
+              <hr>
+              <h4>Description for job 1</h4>
+            </div>
+            <div class="row">
+              <h3>Job 2 title</h3>
+              <hr>
+              <h4>Description for job 2</h4>
+            </div>
+            <div class="row">
+              <h3>Job 3 title</h3>
+              <hr>
+              <h4>Description for job 3</h4>
+            </div>
+            <div class="row">
+              <h3>Job 3 title</h3>
+              <hr>
+              <h4>Description for job 3</h4>
+            </div>
           </div>
           <div class="col-12 col-md-8 main--right">
-            data
+            <h2>Section Title</h2>
+            <div>
+              <h3>Section 1</h3>
+            </div>
+            <div>
+              <h3>Section 2</h3>
+            </div>
+            <div>
+              <h3>Section 3</h3>
+            </div>
           </div>
         </div> 
       </div>
@@ -57,6 +85,7 @@
         </div>
       </div>
     </footer>
+    <div class="col" id="footer-holder"></div>
     
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
