Coded main-right section structure for content and ensured responsivity

--- a/index.html
+++ b/index.html
@@ -40,35 +40,32 @@
         <div class="row">
           <div class="col-12 col-md-4 main--left">
             <div class="row">
-              <h3>Job 1 title</h3>
+              <h3 id="title">Job 1 title</h3>
               <hr>
               <h4>Description for job 1</h4>
             </div>
             <div class="row">
-              <h3>Job 2 title</h3>
+              <h3 id="title">Job 2 title</h3>
               <hr>
               <h4>Description for job 2</h4>
             </div>
             <div class="row">
-              <h3>Job 3 title</h3>
-              <hr>
-              <h4>Description for job 3</h4>
-            </div>
-            <div class="row">
-              <h3>Job 3 title</h3>
+              <h3 id="title">Job 3 title</h3>
               <hr>
               <h4>Description for job 3</h4>
             </div>
           </div>
           <div class="col-12 col-md-8 main--right">
-            <h2>Section Title</h2>
             <div>
+              <h2 id="title">Section Title</h2>
+            </div>
+            <div class="col col-lg-5" id="feature">
               <h3>Section 1</h3>
             </div>
-            <div>
+            <div class="col col-lg-5" id="feature">
               <h3>Section 2</h3>
             </div>
-            <div>
+            <div class="col col-lg-5" id="feature">
               <h3>Section 3</h3>
             </div>
           </div>
@@ -80,12 +77,12 @@
       <div class="container">
         <div class="row footer--full">
           <div class="col col-md-3 footer--left"><p><i class="far fa-copyright"></i> All rights reserved</p></div>
-          <div class="col col-md-6 footer--middle d-none d-sm-block"><p>Download the complete CV in .pdf<i class="fas fa-download"></i></p></div>
+          <div class="col col-md-6 footer--middle d-none d-md-block"><p>Download the complete CV in .pdf<i class="fas fa-download"></i></p></div>
           <div class="col col-md-3 footer--right"><p><i class="fab fa-twitter-square"></i><i class="fab fa-google-plus-square"></i><i class="fab fa-facebook-square"></i><i class="fab fa-whatsapp-square"></i></p></div>
         </div>
       </div>
     </footer>
-    <div class="col" id="footer-holder"></div>
+    <div class="col" id="footer-holder"> </div>
     
     <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
